WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192691
Web Inspector: Prefer "about:blank" instead of an empty string for WebPageDebuggable url
https://bugs.webkit.org/show_bug.cgi?id=192691
Summary
Web Inspector: Prefer "about:blank" instead of an empty string for WebPageDeb...
Joseph Pecoraro
Reported
2018-12-13 20:03:41 PST
Prefer "about:blank" instead of an empty string for WebPageDebuggable url When a WebPageProxy is created and has yet to actually load content it is better to display "about:blank" than an empty string.
Attachments
[PATCH] Proposed Fix
(1.49 KB, patch)
2018-12-13 20:05 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-12-13 20:04:28 PST
<
rdar://problem/46719798
>
Joseph Pecoraro
Comment 2
2018-12-13 20:05:42 PST
Created
attachment 357292
[details]
[PATCH] Proposed Fix
Darin Adler
Comment 3
2018-12-14 10:00:59 PST
Comment on
attachment 357292
[details]
[PATCH] Proposed Fix I suggest considering WTF::blankURL().string() rather than "about:blank"_s.
Blaze Burg
Comment 4
2018-12-14 10:26:56 PST
LGTM. I don't think this is any worse for lack of localization.
WebKit Commit Bot
Comment 5
2018-12-14 10:26:57 PST
Comment on
attachment 357292
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 357292 Committed
r239221
: <
https://trac.webkit.org/changeset/239221
>
WebKit Commit Bot
Comment 6
2018-12-14 10:26:58 PST
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 7
2018-12-14 11:37:49 PST
Follow-up with the WTF::blankURL in: <
https://trac.webkit.org/r239224
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug