Web Inspector: Prefer "about:blank" instead of an empty string for WebPageDebuggable url https://bugs.webkit.org/show_bug.cgi?id=192691 <rdar://problem/46719798>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-12-14
Reviewed by Darin Adler.

* UIProcess/WebPageDebuggable.cpp:
(WebKit::WebPageDebuggable::url const):
Instead of an empty string, return "about:blank" in bail cases.
When inspecting the page that matches the contents.

Canonical link: https://commits.webkit.org/207287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239221 268f45cc-cd09-0410-ab3c-d52691b4dbfc